chore:  add docker volume for node_modules

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --setupFiles dotenv/config --coverage --detectOpenHandles --forceExit",
-    "test:docker": "docker exec -ti deliveryorderapi_app_1 yarn test --abort-on-container-exit",
+    "test:docker": "docker exec -ti delivery-order-api_app_1 yarn test --abort-on-container-exit",
     "start:dev": "NODE_ENV=development nodemon -L --exec 'node -r dotenv/config index.js --async-stack-traces'",
     "start:prod": "NODE_ENV=production node -r dotenv/config index.js --async-stack-traces"
   },
