--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,6 +7,7 @@ services:
       - ${SERVER_PORT}:8080
     volumes:
       - ./:/app/
+      - node_modules:/app/node_modules
     environment:
       DATABASE_HOST: db
     command: yarn test
@@ -26,3 +27,4 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: 1
 volumes:
   dbdata:
+  node_modules:
