--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: always
     volumes:
       - ./:/app/
+      - node_modules:/app/node_modules
     environment:
       DATABASE_HOST: db
     command: yarn start:dev
@@ -28,3 +29,4 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: 1
 volumes:
   dbdata:
+  node_modules:
