--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - ${SERVER_PORT}:8080
     restart: always
+    volumes:
+      - .env:/app/.env
     environment:
       DATABASE_HOST: db
     depends_on:
