chore: better error message

--- a/.env-example
+++ b/.env-example
@@ -3,4 +3,4 @@ DATABASE_NAME=orders_app
 DATABASE_USERNAME=user
 DATABASE_PASSWORD=password
 DATABASE_PORT=33060
-GOOGLE_MAPS_API_KEY=        # Mandatory. Distance calculation will fail if it's not set.
+GOOGLE_MAPS_API_KEY=
